--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ body {
 .scrolled {background-color: rgb(33 37 41 / 80%) !important;}
 .landing {
   min-height: calc(100vh - 74px);
-  background-image: url(../images/header.png);
+  background-image: url(../images/header.webp);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -101,6 +101,7 @@ body {
   height: 120px;
   background-color: #333;
   border-bottom: 2px solid #f5f5f5;
+  cursor: pointer;
 }
 @media (max-width: 991px) {
   .tabs-section ul li {
@@ -163,7 +164,7 @@ body {
   left: 25px;
 }
 .stylish {
-  background-image: url(../images/stylish.png);
+  background-image: url(../images/stylish.webp);
   background-repeat: no-repeat;
   background-size: cover;
 }
